--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,96 +9,115 @@
 	<link rel="stylesheet" href="styles/main.css">
 	<title>CBS Resume</title>
 </head>
+
 <body>
-<div class="main-container">
-	<div class="name-bar">
-		<div class="name-role-container">
-			<div class="name">Josiah Nieves</div>
-			<div class="role">Software Developer</div>
+	<div class="main-container">
+		<div class="name-bar">
+			<div class="name-role-container">
+				<div class="name">Josiah Nieves</div>
+				<div class="role">Software Developer</div>
+			</div>
 		</div>
-	</div>
-	<div class="content-container">
-		<div class="left-content">
-			<div class="intro">
-				Successful Full Stack developer offering two and a half years of
-				experience in demanding environments focused on producing
-				enterprise code for a Fortune 50 company. Well-organized and
-				customer-focused with proven skills in project management and team
-				leadership. Knowledgeable of backend and frontend development
-				requirements of microservices. Experienced in full project life cycle from
-				design to implementation to deployment.
-			</div>
-			<div class="title">Work History</div>
-			<div class="separator"></div>
-			<div class="work-history">
-				<div class="date-range bold">2020-06 -<br>2020-08</div>
-				<div class="job">
-					<div class="bold">Project Manager/Lead Developer</div>
-					<div class="company">Energy Mashup Lab, NJ</div>
-					<ul class="bullets">
-						<li>
-							Designed and developed a configuration generator
-							tool for researchers.
-						</li>
-						<li>
-							Implemented a CI pipeline for verifying pull requests.
-						</li>
-					</ul>
+		<div class="content-container">
+			<div class="left-content">
+				<div class="intro">
+					Successful Full Stack developer offering two and a half years of
+					experience in demanding environments focused on producing
+					enterprise code for a Fortune 50 company. Well-organized and
+					customer-focused with proven skills in project management and team
+					leadership. Knowledgeable of backend and frontend development
+					requirements of microservices. Experienced in full project life cycle from
+					design to implementation to deployment.
 				</div>
-				<div class="date-range"></div>
-				<div class="job">
-					<div class="role"></div>
-					<div class="company"></div>
-					<div class="bullets"></div>
-				</div>
-			</div>
-			<div class="title">Education</div>
-			<div class="separator"></div>
-			<div class="date-range"></div>
-			<div class="school"></div>
-			<div class="specialization"></div>
-		</div>
-		<div class="right-content">
-			<div class="title-container">
-				<div class="title">Contact</div>
+				<div class="title">Work History</div>
 				<div class="separator"></div>
-			</div>
-			<div class="info-container">
-				<div class="bold">Address</div>
-				<div class="content">Clifton, NJ, 07055</div>
-			</div>
-			<div class="title-container">
-				<div class="title">Skills</div>
-				<div class="separator"></div>
-			</div>
-			<div class="skill-container">
-				<div class="skill">
-					<div class="title">Agile Development</div>
-					<div class="bubble-container">
-						<div class="bubble filled"></div>
-						<div class="bubble filled"></div>
-						<div class="bubble unfilled"></div>
-						<div class="bubble unfilled"></div>
-						<div class="bubble unfilled"></div>
+				<div class="work-history">
+					<div class="date-range bold">2020-06 -<br>2020-08</div>
+					<div class="job">
+						<div class="bold">Project Manager/Lead Developer</div>
+						<div class="company">Energy Mashup Lab, NJ</div>
+						<ul class="bullets">
+							<li>
+								Designed and developed a configuration generator
+								tool for researchers.
+							</li>
+							<li>
+								Implemented a CI pipeline for verifying pull requests.
+							</li>
+						</ul>
+					</div>
+					<div class="date-range"></div>
+					<div class="job">
+						<div class="role"></div>
+						<div class="company"></div>
+						<div class="bullets"></div>
 					</div>
 				</div>
-				<div class="skill">
-					<div class="title">Linux Administration</div>
-					<div class="bubble-container">
-						<div class="bubble filled"></div>
-						<div class="bubble filled"></div>
-						<div class="bubble unfilled"></div>
-						<div class="bubble unfilled"></div>
-						<div class="bubble unfilled"></div>
+				<div class="title">Education</div>
+				<div class="separator"></div>
+				<div class="education">
+					<div class="date-range bold">2014-09 -<br>2021-05</div>
+					<div class="content">
+						<div class="degree bold">Bachelor of Science: Information Technology</div>
+						<div class="school">New Jersey Institute Of Technology - Newark, NJ</div>
+						<div class="specialization">
+							Minor in Computer Science and specialization in Web Development
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="title-container">
-				<div class="title">Languages</div>
-				<div class="separator"></div>
+			<div class="right-content">
+				<div class="title-container">
+					<div class="title">Contact</div>
+					<div class="separator"></div>
+				</div>
+				<div class="section-content">
+					<div class="info-block">
+						<div class="title bold">Location</div>
+						<div class="content">Clifton, NJ, 07055</div>
+					</div>
+				</div>
+				<div class="title-container">
+					<div class="title">Skills</div>
+					<div class="separator"></div>
+				</div>
+				<div class="section-content">
+					<div class="skill">
+						<div class="title">Agile Development</div>
+						<div class="bubble-container">
+							<div class="bubble filled"></div>
+							<div class="bubble filled"></div>
+							<div class="bubble unfilled"></div>
+							<div class="bubble unfilled"></div>
+							<div class="bubble unfilled"></div>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="title">Linux Administration</div>
+						<div class="bubble-container">
+							<div class="bubble filled"></div>
+							<div class="bubble filled"></div>
+							<div class="bubble filled"></div>
+							<div class="bubble unfilled"></div>
+							<div class="bubble unfilled"></div>
+						</div>
+					</div>
+				</div>
+				<div class="title-container">
+					<div class="title">Languages</div>
+					<div class="separator"></div>
+				</div>
+				<div class="title">Go</div>
+				<div class="bubble-container">
+					<div class="bubble filled"></div>
+					<div class="bubble filled"></div>
+					<div class="bubble filled"></div>
+					<div class="bubble filled"></div>
+					<div class="bubble unfilled"></div>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 </body>
+
 </html>
