--- a/index.html
+++ b/index.html
@@ -46,11 +46,19 @@
 							</li>
 						</ul>
 					</div>
-					<div class="date-range"></div>
+					<div class="date-range bold">2018-01 -<br>2020-07</div>
 					<div class="job">
-						<div class="role"></div>
-						<div class="company"></div>
-						<div class="bullets"></div>
+						<div class="bold">Backend Software Developer</div>
+						<div class="company">United Parcel Service, NJ</div>
+						<ul class="bullets">
+							<li>
+								Designed and developed a configuration generator
+								tool for researchers.
+							</li>
+							<li>
+								Implemented a CI pipeline for verifying pull requests.
+							</li>
+						</ul>
 					</div>
 				</div>
 				<div class="title">Education</div>
